WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
277559
[css-break] `orphans` and `widows` defaults are inconsistent with the spec
https://bugs.webkit.org/show_bug.cgi?id=277559
Summary
[css-break] `orphans` and `widows` defaults are inconsistent with the spec
Tim Nguyen (:ntim)
Reported
2024-08-02 11:21:55 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-02 11:41:21 PDT
<
rdar://problem/133078713
>
Tim Nguyen (:ntim)
Comment 2
2024-08-02 11:43:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31656
Tim Nguyen (:ntim)
Comment 3
2024-08-02 11:57:46 PDT
***
Bug 260318
has been marked as a duplicate of this bug. ***
Tim Nguyen (:ntim)
Comment 4
2024-08-02 12:14:52 PDT
Comment hidden (obsolete)
Pull request:
https://github.com/WebKit/WebKit/pull/31658
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug