[css-break] `orphans` and `widows` defaults are inconsistent with the spec https://bugs.webkit.org/show_bug.cgi?id=277559 rdar://133078713

Reviewed by NOBODY (OOPS!).

The default state is inconsistent across the codebase and not representable via CSS (`orphans: auto`/`widows: auto` do not parse).

Remove `hasAutoWidows`/`hasAutoOrphans` and related code.

Switch everything to use the spec default, which is 2: https://drafts.csswg.org/css-break/#widows-orphans

* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle const):
* Source/WebCore/layout/integration/inline/LayoutIntegrationPagination.cpp:
(WebCore::LayoutIntegration::computeAdjustmentsForPagination):
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::calculateMinimumPageHeight):
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::conservativelyCollectChangedAnimatableProperties const):
* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/RenderStyleSetters.h:
(WebCore::RenderStyle::setHasAutoColumnWidth):
(WebCore::RenderStyle::setHasAutoUsedZIndex):
(WebCore::RenderStyle::setOrphans):
(WebCore::RenderStyle::setWidows):
(WebCore::RenderStyle::setHasAutoOrphans): Deleted.
(WebCore::RenderStyle::setHasAutoWidows): Deleted.
* Source/WebCore/rendering/style/StyleRareInheritedData.cpp:
(WebCore::StyleRareInheritedData::StyleRareInheritedData):
(WebCore::StyleRareInheritedData::operator== const):
* Source/WebCore/rendering/style/StyleRareInheritedData.h: